--- a/knowit2020/slides.html
+++ b/knowit2020/slides.html
@@ -330,9 +330,12 @@ Performance metrics
 
 -->
 </section></section>
-<section><section id="soundsensing-platform" class="title-slide slide level1"><h1>Soundsensing Platform</h1><!--
+<section><section id="deploying" class="title-slide slide level1"><h1>Deploying</h1><!--
 FIXME: 
 --></section>
+<section id="soundsensing-platform" class="slide level2">
+<h2>Soundsensing Platform</h2>
+</section>
 <section id="demo-video" class="slide level2">
 <h2>Demo video</h2>
 <iframe src="https://www.youtube.com/embed/KQHQxMG1CZo" controls width="1000" height="700"></iframe>
@@ -345,13 +348,35 @@ FIXME:
 <section><section id="wrapping-up" class="title-slide slide level1"><h1>Wrapping up</h1></section>
 <section id="summary" class="slide level2">
 <h2>Summary</h2>
+</section>
+<section id="partner-opportunities" class="slide level2">
+<h2>Partner opportunities</h2>
+<p>We are building a partner network</p>
 <ul>
-<li>Noise pollution is a growing problem</li>
-<li>Wireless Sensor Networks can used to quantify</li>
-<li>Noise Classification can provide more information</li>
-<li>Want high density of sensors. Need to be low cost</li>
-<li>On-sensor classification desirable for power/cost and privacy</li>
+<li>Partner role: Deliver solutions and integration on platform</li>
+<li>Especially cases that require a lot of custom work</li>
+<li>Something for Knowit?</li>
 </ul>
+<p>Email: <a href="mailto:jon@soundsensing.no" class="email">jon@soundsensing.no</a></p>
+</section>
+<section id="employment-opportunities" class="slide level2">
+<h2>Employment opportunities</h2>
+<p>Think that this sounds cool to work on?</p>
+<ul>
+<li>Internships in Data Science now</li>
+<li>Hiring 2 developers in 2020</li>
+</ul>
+<p>Email: <a href="mailto:jon@soundsensing.no" class="email">jon@soundsensing.no</a></p>
+</section>
+<section id="investment-opportunities" class="slide level2">
+<h2>Investment opportunities</h2>
+<p>Want to invest in a Machine Learning and Internet of Things startup?</p>
+<ul>
+<li>Funding round open now</li>
+<li>60% comitted</li>
+<li>Some open slots still</li>
+</ul>
+<p>Email: <a href="mailto:ole@soundsensing.no" class="email">ole@soundsensing.no</a></p>
 </section>
 <section id="more-resources" class="slide level2">
 <h2>More resources</h2>
@@ -381,11 +406,6 @@ FIXME:
 </section>
 <section id="come-talk-to-me" class="slide level2">
 <h2>Come talk to me!</h2>
-<ul>
-<li>Noise Monitoring sensors. Pilot projects for 2020?</li>
-<li>Environmental Sound, Wireless Sensor Networks for Audio. Research partnering?</li>
-<li>“On-edge” / Embedded Device ML. Happy to advise!</li>
-</ul>
 <p>Email: <a href="mailto:jon@soundsensing.no" class="email">jon@soundsensing.no</a></p>
 </section></section>
 <section><section id="bonus" class="title-slide slide level1"><h1>BONUS</h1></section>
