knowit2020: Stage ready

--- a/knowit2020/slides.html
+++ b/knowit2020/slides.html
@@ -251,11 +251,17 @@ TODO: define AD task
 <li>Capturing relevant metadata</li>
 <li>Maintaining privacy</li>
 </ul>
-<p>Best practice: Design the process, document in a <strong>protocol</strong></p>
 <aside class="notes">
 <p><code>FIXME: image of our Data document</code></p>
 <p>Personally identifyable information. GDPR Sensitive data Privacy</p>
 </aside>
+</section>
+<section id="data-management" class="slide level2">
+<h2>Data management</h2>
+<figure>
+<img data-src="img/plans.png" style="width:80.0%" alt="" /><figcaption>Data management plans</figcaption>
+</figure>
+<p>Best practice: Design the process, document in a <strong>protocol</strong></p>
 </section>
 <section id="data-requirements" class="slide level2">
 <h2>Data Requirements</h2>
@@ -369,10 +375,8 @@ Based on SB-CNN (Salamon+Bello, 2016)
 Performance metrics
 
 -->
-</section>
-<section id="summary" class="slide level2">
-<h2>Summary</h2>
-</section>
+</section></section>
+<section><section id="summary" class="title-slide slide level1"><h1>Summary</h1></section>
 <section id="standard-models-exist" class="slide level2">
 <h2>Standard models exist</h2>
 <p>Try the standard audio pipeline, it often does OK.</p>
@@ -384,12 +388,21 @@ Performance metrics
 </ul>
 <p>All available as open source solutions.</p>
 </section>
-<section id="data-is-challenging" class="slide level2">
-<h2>Data is challenging</h2>
+<section id="data-collection-is-not-magic" class="slide level2">
+<h2>Data collection is not magic</h2>
 <ul>
-<li>Data collection</li>
-<li></li>
+<li>Structure collection upfront</li>
+<li>Budget resources for collection and labeling</li>
+<li>Integrate quality checking</li>
+<li>Build it up gradually</li>
 </ul>
+<p>Doable, but takes time!</p>
+</section>
+<section id="now-what" class="slide level2">
+<h2>Now what</h2>
+<p>So have a model that performs Audio Classification <strong>on our PC</strong>.</p>
+<p>But we want to monitor a real-world phenomenon.</p>
+<p>How to deploy this?</p>
 </section></section>
 <section><section id="deploying" class="title-slide slide level1"><h1>Deploying</h1></section>
 <section id="architectures" class="slide level2">
@@ -398,6 +411,10 @@ Performance metrics
 <!--
 FIXME: 
 -->
+</section>
+<section id="soundsensing-platform" class="slide level2">
+<h2>Soundsensing Platform</h2>
+<p><img data-src="img/soundsensing-platform.svg" /></p>
 </section>
 <section id="demo-video" class="slide level2">
 <h2>Demo video</h2>
@@ -413,10 +430,6 @@ FIXME:
 <figure>
 <img data-src="img/what-we-do.png" alt="" /><figcaption>Pilot projects with customers Now - 2020</figcaption>
 </figure>
-</section>
-<section id="soundsensing-platform" class="slide level2">
-<h2>Soundsensing Platform</h2>
-<p><img data-src="img/soundsensing-platform.svg" /></p>
 </section></section>
 <section><section id="outro" class="title-slide slide level1"><h1>Outro</h1></section>
 <section id="partner-opportunities" class="slide level2">
@@ -471,10 +484,6 @@ FIXME:
 <h1 style="padding: 100px">
 ?
 </h1>
-<p>Email: <a href="mailto:jon@soundsensing.no" class="email">jon@soundsensing.no</a></p>
-</section>
-<section id="come-talk-to-me" class="slide level2">
-<h2>Come talk to me!</h2>
 <p>Email: <a href="mailto:jon@soundsensing.no" class="email">jon@soundsensing.no</a></p>
 </section></section>
 <section id="bonus" class="title-slide slide level1"><h1>BONUS</h1></section>
