--- a/knowit2020/slides.html
+++ b/knowit2020/slides.html
@@ -119,6 +119,18 @@
 <li>Medical. Detect heart murmurs</li>
 <li>Process industry. Advance process once audible event happens (popcorn)</li>
 </ul>
+</section>
+<section id="neural-network-co-processors" class="slide level2">
+<h2>Neural Network co-processors</h2>
+<figure>
+<img data-src="img/ST-Orlando-SoC.png" style="width:25.0%" alt="" /><figcaption>Project Orlando (ST Microelectronics), expected 2020</figcaption>
+</figure>
+<p>Expected 10x power efficiency increases.</p>
+<aside class="notes">
+<p>2.9 TOPS/W. AlexNet, 1000 classes, 10 FPS. 41 mWatt</p>
+<p>Audio models probably <strong>&lt; 1 mWatt</strong>.</p>
+<p>https://www.latticesemi.com/Blog/2019/05/17/18/25/sensAI</p>
+</aside>
 <!--
 
 ## Outline
@@ -375,6 +387,10 @@ Based on SB-CNN (Salamon+Bello, 2016)
 Performance metrics
 
 -->
+</section>
+<section id="evaluation" class="slide level2">
+<h2>Evaluation</h2>
+<p><img data-src="img/results.png" style="width:100.0%" /></p>
 </section></section>
 <section><section id="summary" class="title-slide slide level1"><h1>Summary</h1></section>
 <section id="standard-models-exist" class="slide level2">
@@ -613,8 +629,8 @@ FIXME:
 <p>Human presence detection. VGG8 on 64x64 RGB image, 5 FPS: 7 mW.</p>
 <p>Audio ML approx <strong>1 mW</strong></p>
 </section>
-<section id="neural-network-co-processors" class="slide level2">
-<h2>Neural Network co-processors</h2>
+<section id="neural-network-co-processors-micro" class="slide level2">
+<h2>Neural Network co-processors micro</h2>
 <figure>
 <img data-src="img/ST-Orlando-SoC.png" style="width:25.0%" alt="" /><figcaption>Project Orlando (ST Microelectronics), expected 2020</figcaption>
 </figure>
